--- a/src/components/Body/Body.module.css
+++ b/src/components/Body/Body.module.css
@@ -30,6 +30,9 @@
     border-radius: 50%;
     background-color: rgb(81, 144, 234);
 }
+.colors .active{
+    border: 2px solid #000;
+}
 .toolbar button{
     padding: 8px 16px;
     border-radius: 5px;
