--- a/src/components/Resume/Resume.module.css
+++ b/src/components/Resume/Resume.module.css
@@ -1,11 +1,11 @@
 .container{
     --color: rgb(0, 132, 255);
-min-width: 500px;
+min-width: 700px;
 max-width: 800px;
 margin: 0 auto;
 flex:1.2;
 height: fit-content;
-min-height: 900px;
+min-height: 1050px;
 box-shadow: 1px 1px 3px 2px rgba(0, 0, 0, 0.1);
 display: flex;
 flex-direction: column;
@@ -133,4 +133,11 @@ font-size: 0.875rem;
 padding-left: 18px;
 font-size: 0.875rem;
 
+}
+.numbered li{
+    list-style-type: decimal;
+}
+
+.hidden{
+    display: none;
 }
