--- a/src/components/Editor/Editor.module.css
+++ b/src/components/Editor/Editor.module.css
@@ -1,12 +1,14 @@
 .container{
-    min-width: 550px;
+    min-width: 850px;
     min-height: 450px;
+    max-width: 700px;
     display: flex;
     flex-direction: column;
     gap: 30px;
     box-shadow: 1px 1px 4px rgba(0, 0, 0, 0.2);
     padding-top: 5px;
     height: fit-content;
+    margin: 0 auto;
 }
 .header{
     display: flex;
